# vuit

./: Cargo.toml  LICENSE  README.md  install.sh  vuit.rb
Formula/: vuit.rb
src/: lib.rs  main.rs  vuit.rs
src/vuit/: events.rs  mod.rs  ui.rs  utils.rs
src/vuit/contexts/: fileviewer.rs  stringsearch.rs  stringsearchreplace.rs  terminal.rs
