[package]
name = "vuit"
version = "0.4.0"
authors = ["Maxwell Johnson <mjohnsmax@gmail.com>"]
edition = "2024"
description = "A Buffer Manager for Vim."
license = "MIT"

[dependencies]
clap = "4.5.32"
colored = "3.0.0"
crossterm = "0.28.1"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
ignore = "0.4.23"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[package.metadata.deb]
maintainer = "Maxwell Johnson <mjohnsmax@gmail.com>"
depends = "vim"
section = "utils"
priority = "optional"
revision = "0"
assets = [
    ["target/release/vuit", "/usr/local/bin/", "755"]
]    
