[package]
name = "vuit"
version = "0.8.9"
authors = ["Maxwell Johnson <mjohnsmax@gmail.com>"]
edition = "2024"
description = "A Buffer Manager for Vim."
license = "MIT"

[[bin]]
name = "vuit"
path = "src/main.rs"

[dependencies]
clap = "4.5.32"
colored = "3.0.0"
crossterm = "0.28.1"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
grep = "0.3.2"
grep-matcher = "0.1.7"
ignore = "0.4.23"
itertools = "0.14.0"
memchr = "2.7.4"
portable-pty = "0.9.0"
ratatui = "0.29.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
arboard = "3"

[package.metadata.deb]
maintainer = "Maxwell Johnson <mjohnsmax@gmail.com>"
depends = "vim"
section = "utils"
priority = "optional"
revision = "0"
assets = [
    ["target/release/vuit", "/usr/local/bin/", "755"]
]    
